2006-04-21  Alexandre Duret-Lutz  <adl@gnu.org>

	* m4/amversion.in (_AM_AUTOCONF_VERSION): New macro.
	(AM_SET_CURRENT_AUTOMAKE_VERSION): Call it.
	* aclocal.in (trace_used_macros): Trace _AM_AUTOCONF_VERSION.
	(write_aclocal): Output a check for Autoconf's version in aclocal.m4.
	Doing so ensures that users cannot build configure and Makefiles
	with two different autoconf versions.  Report from Noah Misch.
	* tests/missing4.test: New file.
	* tests/Makefile.am (TESTS): Add it.

2006-04-20  Paul Lunau  <temp@lunau.me.uk>  (tiny change)
	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* lib/am/dejagnu.am (check-DEJAGNU): Fail when at least one test
	failed, instead of when the last one failed (PR automake/488).
	Report from Paul Lunau.
	* tests/dejagnu4.test: Update to expose this.
	* THANKS: Update.

2006-04-19  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* lib/am/check.am (check-TESTS): Match XFAIL_TESTS delimited by
	TABs as well as spaces.  Fixes PR automake/490.
	* tests/check6.test: New test.
	* tests/Makefile.am, THANKS: Update.
	Report from Diab Jerius <djerius@cfa.harvard.edu>.

2006-04-17  Stepan Kasal  <kasal@ucw.cz>

	* lib/Autom4te/FileUtils.pm (find_file): Fix a typo in the
	description; eliminate the duplicate error message.
	* doc/automake.texi (@direntry): `Invoking Automake' is the name
	of the usage node for `automake'
	* lib/Automake/Variable.pm (%_gen_varname): Fix typos in the
	comment.

2006-04-17  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* m4/lispdir.m4 (AM_PATH_LISPDIR): Require Autoconf 2.59c,
	because it uses `datarootdir'.  Bump copyright year and serial.

2006-04-10  Stepan Kasal  <kasal@ucw.cz>

	* NEWS: Fix typo.

2006-04-09  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/Automake/Variable.pm (_hash_varname, _hash_values): New functions.
	(_gen_varname): Use _hash_values, and return a flag indicating whether
	the variable name was generated or reused.
	(transform_variable_recursively): Do not redefine variables that