@@ -1,3 +1,10 @@
+2006-04-24  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* lib/install.sh: Handle --, and diagnose unknown options.
+	* m4/mkdirp.m4 (AM_PROG_MKDIR_P): In the normal case, set
+	mkdir_p='mkdir -p', not to 'mkdir -p --', for consistency with
+	the other ways that mkdir_p might be set.
+
 2006-04-21  Alexandre Duret-Lutz  <adl@gnu.org>
 
 	* m4/amversion.in (_AM_AUTOCONF_VERSION): New macro.
